add necessary files to create a base for the pitcher project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#462424",
         "titleBar.activeBackground": "#633232",
         "titleBar.activeForeground": "#FCF9F9"
-    }
+    },
+    "python.pythonPath": "virtual/bin/python3.6"
 }
